--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://roushanku:zkBt2vzsGsCU7H9z@cluster0.6apdy8p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=
